# iota-sympantos

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  TUI_PROCESS_MODEL.md  benchmark-latest-summary.json  benchmark-latest.json  build.rs  nimia.yaml.template  pet_demo.py  query_kanban.py  run-desktop.sh  run.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
.kiro/prompts/: opsx-explore.prompt.md
.opencode/commands/: opsx-explore.md
crates/iota-cli/: Cargo.toml
crates/iota-cli/src/: main.rs
crates/iota-cli/src/cli/: SKILL.md  daemon_cmd.rs  info_cmd.rs  info_cmd_tests.rs  kanban_cmd.rs  kanban_cmd_tests.rs  mod.rs  mod_tests.rs  observability_cmd.rs  observability_cmd_tests.rs  run_cmd.rs  skill_cmd.rs
crates/iota-cli/src/tui/: SKILL.md  autocomplete.rs  events_tests.rs  exporter.rs  input.rs  kanban_command.rs  kanban_command_tests.rs  kanban_view.rs  kanban_view_tests.rs  loop.rs  loop_tests.rs  mod.rs  render.rs  scrollback.rs  scrollback_tests.rs  slash_command.rs  slash_command_tests.rs  state.rs  status_bar.rs  status_bar_tests.rs  terminal_lifecycle.rs
crates/iota-core/: Cargo.toml
crates/iota-core/benches/: daemon_throughput.rs
crates/iota-core/src/: lib.rs
crates/iota-core/src/acp/: SKILL.md  acp_tests.rs  backend.rs  backend_tests.rs  client.rs  message.rs  mod.rs  parser.rs  parser_tests.rs  permission.rs  permission_tests.rs  session.rs  session_tests.rs  stream_reader.rs  types.rs  util.rs  wire_tests.rs
crates/iota-core/src/config/: SKILL.md  adapters.rs  backend.rs  backend_tests.rs  context.rs  loader.rs  mod.rs  model.rs  paths.rs  schema.rs  tests.rs
crates/iota-core/src/context/: SKILL.md  context_tests.rs  mod.rs
crates/iota-core/src/daemon/: SKILL.md  daemon_tests.rs  desktop.rs  desktop_tests.rs  mod.rs  pool.rs  proto.rs  proto_tests.rs
crates/iota-core/src/engine/: SKILL.md  memory_ops.rs  mod.rs  prompt.rs  session_ledger.rs  tests.rs
crates/iota-core/src/kanban/: bridge.rs  bridge_tests.rs  dispatcher.rs  dispatcher_tests.rs  event_sourcing_tests.rs  event_sync.rs  event_sync_tests.rs  shadow.rs  shadow_tests.rs  sqlite_store_tests.rs  state_machine.rs  state_machine_tests.rs  types.rs  worker_tests.rs
crates/iota-core/src/mcp/: SKILL.md  client.rs  client_tests.rs  router.rs  server.rs  server_tests.rs  tool_dispatch.rs  tool_dispatch_tests.rs
crates/iota-core/src/memory/: SKILL.md  embedding.rs  embedding_tests.rs  mod.rs  store.rs  store_tests.rs
crates/iota-core/src/runtime_event/: SKILL.md  mod.rs  tests.rs
crates/iota-core/src/skill/: SKILL.md  cache.rs  fun.rs  mod.rs  runner.rs  skill_tests.rs
crates/iota-core/src/skill/core/iota-memory-taxonomy/: SKILL.md
crates/iota-core/src/storage/: mod.rs  models.rs  retry.rs  storage_tests.rs  supabase.rs
crates/iota-core/src/store/: SKILL.md  approvals.rs  approvals_tests.rs  cache.rs  cache_tests.rs  db.rs  ledger.rs  ledger_tests.rs  mod.rs  observability.rs  observability_tests.rs
crates/iota-core/src/telemetry/: SKILL.md  mod.rs  stderr.rs  telemetry_tests.rs
crates/iota-core/src/utils/: SKILL.md  tests.rs
crates/iota-core/tests/: daemon_integration.rs
crates/iota-desktop/: README.md  SKILL.md  index.html  package-lock.json  package.json
crates/iota-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/iota-desktop/src-tauri/icons/: icon.icns
crates/iota-desktop/src-tauri/src/: daemon_client.rs  lib.rs  lib_tests.rs  main.rs
crates/iota-kanban/: Cargo.toml  SKILL.md
crates/iota-kanban/src/: bridge.rs  bridge_tests.rs  dispatcher.rs  dispatcher_tests.rs  event_sourcing.rs  event_sourcing_tests.rs  event_sync_tests.rs  lib.rs  shadow_tests.rs  sqlite_store.rs  sqlite_store_tests.rs  state_machine_tests.rs  utils.rs  worker.rs  worker_tests.rs
doc/: OBSERVABILITY_SUMMARY.md  README-observability.md  README-zh.md  acp-runtime.md  architecture.md  code-call-chains.md  debugging.md  observability-diagrams.md  observability-implementation.md  observability-quick-reference.md  observability.md  plan-0504-plus.md  plan-0504.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/observability/: docker-compose.yml  otel-collector-config.yaml
docs/: README-zh.md  architecture.md  code-call-chains.md  command.md  debugging.md  desktop-mvp-acceptance.md  docker.md  iota book.md  observability.md
docs/superpowers/: README.md
examples/: README.md  kanban_hermes_demo.ps1  kanban_live_demo.rs
gefsi/: README.md  exp01-memory.md  exp02-skill-fun.md  exp03-acp-runtime.md  exp04-token-stats.md  exp05-dispatch.ps1  exp05-kanban-dispatch.md
images/: code-call-chains.dot
img_prompt/: architecture-diagram.md  architecture-poster.md  code-call-chains-poster.md  debugging-poster.md  iota-sympantos-diagrams.md  observability-poster.md  remember.txt
note/: note-1.md
posts/: 2026-05-17-exp04-token-stats.md
script_agent_output/: script.json  script.md
script_agent_output/x_optimizer_output/: x_thread.json  x_viral_post.json
scripts/: dev-desktop.mjs  dev-desktop.sh  verify-observability.sh
skills/pet-generator/: SKILL.md
src/: SKILL.md  acp.rs  acp_permission.rs  acp_session.rs  acp_wire.rs  agent.rs  app.rs  approval.rs  cli.rs  config.rs  config_tests.rs  context.rs  context_mcp.rs  engine.rs  engine_tests.rs  event_store.rs  fun_mcp.rs  lib.rs  main.rs  mcp_client.rs  mcp_router.rs  memory.rs  native_materializer.rs  runtime_event.rs  runtime_event_tests.rs  session_ledger.rs  skill_registry_cache.rs  skill_runner.rs  skills.rs  tui.rs  utils.rs
src/acp/: SKILL.md  backend.rs  client.rs  message.rs  message_tests.rs  mod.rs  parser.rs  permission.rs  session.rs  session_tests.rs  stream_reader.rs  tests.rs  types.rs  wire.rs  wire_tests.rs
src/cli/: SKILL.md  info_cmd.rs  kanban_cmd.rs  memory_cmd.rs  mod.rs  observability_cmd.rs
src/config/: SKILL.md  context.rs  effective.rs  helpers.rs  mod.rs  paths.rs  schema.rs  tests.rs
src/context/: SKILL.md  context_tests.rs  mod.rs  server.rs  server_tests.rs
src/daemon/: SKILL.md  mod.rs  pool.rs  proto.rs
src/engine/: SKILL.md  mod.rs  (+3 more)
(+163 files in other folders)
