[package]
name = "iota-sympantos"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"

[[bin]]
name = "iota"
path = "src/main.rs"
