[package]
name = "iota-sympantos"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.30"
opentelemetry-appender-tracing = "0.29"
hostname = "0.4"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
anyhow = "1.0"
chrono = "0.4"
dirs = "6.0.0"
tokio-util = "0.7"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
pulldown-cmark = "0.12"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "iota"
path = "src/main.rs"
