[workspace]
members = [
    "crates/iota-core",
    "crates/iota-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
dirs = "6.0.0"
futures-util = "0.3"
hex = "0.4"
hostname = "0.4"
opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
pulldown-cmark = "0.12"
ratatui = { version = "0.29", features = ["scrolling-regions", "unstable-backend-writer", "unstable-rendered-line-info", "unstable-widget-ref"] }
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
