[package]
name = "iota-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Tauri App for iota-sympantos"

[lib]
name = "iota_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-opener = "2.2.5"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
dirs.workspace = true
uuid.workspace = true
anyhow.workspace = true
iota-core = { path = "../../iota-core" }
iota-kanban = { path = "../../iota-kanban" }


